--- a/map.html
+++ b/map.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>店舗レイアウト</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
       background-color: #f0e4d7;
