--- a/map.html
+++ b/map.html
@@ -197,23 +197,23 @@
 
 
     <!-- テーブル6 -->
-    <div class="table" style="top: 470px; left: 680px;" id="table6">6</div>
-    <div class="chair" style="top: 485px; left: 660px;" id="table6"></div>
-    <div class="chair" style="top: 485px; left: 762px;" id="table6"></div>
-    <div class="chair" style="top: 525px; left: 660px;" id="table6"></div>
-    <div class="chair" style="top: 525px; left: 762px;" id="table6"></div>
-    <div class="chair" style="top: 565px; left: 660px;" id="table6"></div>
-    <div class="chair" style="top: 565px; left: 762px;" id="table6"></div>
+    <div class="table" style="top: 470px; left: 680px;" id="table6" data-table="6">6</div>
+    <div class="chair" style="top: 485px; left: 660px;" data-table="6"></div>
+    <div class="chair" style="top: 485px; left: 762px;" data-table="6"></div>
+    <div class="chair" style="top: 525px; left: 660px;" data-table="6"></div>
+    <div class="chair" style="top: 525px; left: 762px;" data-table="6"></div>
+    <div class="chair" style="top: 565px; left: 660px;" data-table="6"></div>
+    <div class="chair" style="top: 565px; left: 762px;" data-table="6"></div>
 
 
     <!-- テーブル6 -->
-    <div class="table" style="top: 470px; left: 480px;" id="table7">7</div>
-    <div class="chair" style="top: 485px; left: 460px;" id="table7"></div>
-    <div class="chair" style="top: 485px; left: 562px;" id="table7"></div>
-    <div class="chair" style="top: 525px; left: 460px;" id="table7"></div>
-    <div class="chair" style="top: 525px; left: 562px;" id="table7"></div>
-    <div class="chair" style="top: 565px; left: 460px;" id="table7"></div>
-    <div class="chair" style="top: 565px; left: 562px;" id="table7"></div>
+    <div class="table" style="top: 470px; left: 480px;" id="table7" data-table="7">7</div>
+    <div class="chair" style="top: 485px; left: 460px;" data-table="7"></div>
+    <div class="chair" style="top: 485px; left: 562px;" data-table="7"></div>
+    <div class="chair" style="top: 525px; left: 460px;" data-table="7"></div>
+    <div class="chair" style="top: 525px; left: 562px;" data-table="7"></div>
+    <div class="chair" style="top: 565px; left: 460px;" data-table="7"></div>
+    <div class="chair" style="top: 565px; left: 562px;" data-table="7"></div>
 
 
     
