--- a/map.html
+++ b/map.html
@@ -81,6 +81,16 @@
     .chair.occupied {
       background-color: red;
     }
+
+    .label {
+      position: absolute;
+      font-weight: bold;
+      background: #fff;
+      padding: 2px 5px;
+      border: 1px solid #333;
+      border-radius: 4px;
+      font-size: 12px;
+    }
   </style>
 
   <script>
