--- a/map.html
+++ b/map.html
@@ -17,7 +17,10 @@
     }
 
     .floor {
-      position: relative;
+      position: absolute; 
+      top: 50%;           
+      left: 50%;          
+      transform: translate(-50%, -50%);
       width: 800px;
       height: 600px;
       margin: 20px auto;
