--- a/map.html
+++ b/map.html
@@ -15,17 +15,24 @@
       margin: 0;
       padding: 0;
     }
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
 
     .floor {
-      position: absolute; 
-      top: 50%;           
-      left: 50%;          
+      position: absolute;
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
       width: 800px;
       height: 600px;
       background-color: #f7e3c5;
       border: 2px solid #444;
     }
+
     
     .table, .table2 {
       position: absolute;
