--- a/map.html
+++ b/map.html
@@ -15,12 +15,14 @@
       margin: 0;
       padding: 0;
     }
+
+
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
+      position: relative;
     }
-
 
     .floor {
       position: absolute;
