--- a/map.html
+++ b/map.html
@@ -16,6 +16,14 @@
       padding: 0;
     }
 
+    .floor {
+      position: relative;
+      width: 800px;
+      height: 600px;
+      margin: 20px auto;
+      background-color: #f7e3c5;
+      border: 2px solid #444;
+    }
     
     .table, .table2 {
       position: absolute;
@@ -107,7 +115,7 @@
         const isOccupied = currentCount > 0;
 
         // テーブルと椅子にクラスを適用
-        document.querySelectorAll(`[data-table="${tableNum}"]`).forEach(el => {
+        document.querySelectorAll([data-table="${tableNum}"]).forEach(el => {
           el.classList.toggle("occupied", isOccupied);
         });
       });
@@ -147,6 +155,8 @@
   </script>
 </head>
 <body>
+
+  <div class="floor" id="floor">
     <!-- テーブル1 -->
     <div class="table" style="top: 140px; left: 30px;" id="table1" data-table="1">1</div>
     <div class="chair" style="top: 155px; left: 10px;" data-table="1"></div>
