--- a/map.html
+++ b/map.html
@@ -81,17 +81,6 @@
     .chair.occupied {
       background-color: red;
     }
-
-    .label {
-      position: absolute;
-      font-weight: bold;
-      background: #fff;
-      padding: 2px 5px;
-      border: 1px solid #333;
-      border-radius: 4px;
-      font-size: 12px;
-    }
-
   </style>
 
   <script>
@@ -115,7 +104,7 @@
         const isOccupied = currentCount > 0;
 
         // テーブルと椅子にクラスを適用
-        document.querySelectorAll([data-table="${tableNum}"]).forEach(el => {
+        document.querySelectorAll(`[data-table="${tableNum}"]`).forEach(el => {
           el.classList.toggle("occupied", isOccupied);
         });
       });
@@ -155,7 +144,6 @@
   </script>
 </head>
 <body>
-
   <div class="floor" id="floor">
     <!-- テーブル1 -->
     <div class="table" style="top: 140px; left: 30px;" id="table1" data-table="1">1</div>
