--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
     .floor {
       position: relative;
       max-width: 100%;
-      max-height: 100px;
+      max-height: 100%;
       margin: 20px auto;
       background-color: #f7e3c5;
       border: 2px solid #444;
