--- a/map.html
+++ b/map.html
@@ -18,8 +18,9 @@
 
     .floor {
       position: relative;
-      max-width: 100%;
-      max-height: 100%;
+      width: 800px;
+      height: 600px;
+      margin: 20px auto
       background-color: #f7e3c5;
       border: 2px solid #444;
     }
