--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
       position: relative;
       width: 800px;
       height: 600px;
-      margin: 20px auto
+      margin: 20px auto;
       background-color: #f7e3c5;
       border: 2px solid #444;
     }
@@ -80,16 +80,6 @@
 
     .chair.occupied {
       background-color: red;
-    }
-
-     .label {
-      position: absolute;
-      font-weight: bold;
-      background: #fff;
-      padding: 2px 5px;
-      border: 1px solid #333;
-      border-radius: 4px;
-      font-size: 12px;
     }
   </style>
 
