--- a/enter.html
+++ b/enter.html
@@ -44,8 +44,8 @@
         });
 
         if (enterCount > exitCount) {
-          // すでに入店済み（退店していない） → already.html に遷移
-          window.location.href = "already.html";
+          // すでに入店済み（退店していない） → already-enter.html に遷移
+          window.location.href = "already-enter.html";
           return;
         }
 
