--- a/histogram.html
+++ b/histogram.html
@@ -2,168 +2,73 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>混雑分析</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <title>混雑ログ表示</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
   <style>
     body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #2c3e50;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-    }
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-    nav {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      background-color: #3498db;
-      text-align: center;
-      border-top: 1px solid #fff;
-      border-bottom: 1px solid #fff;
-    }
-    nav a {
-      padding: 12px 0;
-      display: block;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      border-right: 1px solid #fff;
-    }
-    nav a:last-child {
-      border-right: none;
-    }
-    nav a.active {
-      background-color: #1f618d;
-    }
-    nav a:hover {
-      background-color: #2980b9;
-    }
-    main {
+      font-family: Arial, sans-serif;
       padding: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
     }
     .filters {
       margin-bottom: 20px;
     }
-    .chart-container {
+    #histogram {
       width: 100%;
-      height: 70vh;
-      overflow-x: auto;
-      background: #fff;
-      border-radius: 10px;
-      padding: 10px;
-    }
-    #details {
-      margin-top: 30px;
-      background-color: #f4f4f4;
-      padding: 20px;
-      border-radius: 10px;
+      height: 400px;
     }
     table {
       width: 100%;
       border-collapse: collapse;
+      margin-top: 20px;
     }
     th, td {
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
       padding: 8px;
       text-align: center;
     }
     th {
-      background-color: #e0e0e0;
+      background-color: #f4f4f4;
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-bar">
-      <div class="header-title">店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
-    </div>
-    <nav>
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html" class="active">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </nav>
-  </header>
-
-  <main>
-    <h2>混雑傾向分析</h2>
-    <div class="filters">
-      日付: <input type="date" id="datePicker">
-      時間単位: 
-      <select id="interval">
-        <option value="60">60分</option>
-        <option value="30">30分</option>
-        <option value="10">10分</option>
-      </select>
-    </div>
-    <div class="chart-container">
-      <canvas id="histogram"></canvas>
-    </div>
-    <div id="details">
-      <h3>詳細データ</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>日付</th>
-            <th>時間帯</th>
-            <th>テーブル番号</th>
-            <th>滞在時間</th>
-            <th>入店時間</th>
-            <th>退店時間</th>
-          </tr>
-        </thead>
-        <tbody id="logTableBody"></tbody>
-      </table>
-    </div>
-  </main>
-
+  <h1>混雑ログ表示</h1>
+  <div class="filters">
+    <label for="datePicker">日付:</label>
+    <input type="date" id="datePicker">
+    <label for="interval">時間間隔（分）:</label>
+    <input type="number" id="interval" value="30" min="1" max="180">
+    表示単位:
+    <select id="rangeType">
+      <option value="day" selected>日</option>
+      <option value="week">週</option>
+      <option value="month">月</option>
+    </select>
+    <button onclick="updateChartAndTable()">更新</button>
+    <button id="downloadCSV">CSVダウンロード</button>
+  </div>
+  <canvas id="histogram"></canvas>
+  <table>
+    <thead>
+      <tr>
+        <th>日付</th>
+        <th>時間帯</th>
+        <th>テーブル番号</th>
+        <th>滞在時間</th>
+        <th>入店時間</th>
+        <th>退店時間</th>
+      </tr>
+    </thead>
+    <tbody id="logTableBody"></tbody>
+  </table>
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+      // Your Firebase config here
     };
-    firebase.initializeApp(firebaseConfig);
+    const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-
     let chart;
 
     function getTimeSlots(interval) {
@@ -171,27 +76,54 @@
       for (let h = 0; h < 24; h++) {
         for (let m = 0; m < 60; m += interval) {
           const start = `${String(h).padStart(2, '0')}:${String(m).padStart(2, '0')}`;
-          const end = `${String(h + Math.floor((m + interval) / 60)).padStart(2, '0')}:${String((m + interval) % 60).padStart(2, '0')}`;
-          slots.push(`${start}～${end}`);
+          const endM = m + interval;
+          const endH = h + Math.floor(endM / 60);
+          const endMin = endM % 60;
+          const end = `${String(endH).padStart(2, '0')}:${String(endMin).padStart(2, '0')}`;
+          slots.push(`${start}〜${end}`);
         }
       }
       return slots;
     }
 
-    function formatTime(dt) {
-      return dt.toLocaleString("ja-JP", { hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Tokyo' });
+    function getDateRange(rangeType, baseDateStr) {
+      const baseDate = new Date(baseDateStr + "T00:00:00+09:00");
+      let start, end;
+
+      if (rangeType === "day") {
+        start = new Date(baseDate);
+        end = new Date(baseDate);
+        end.setHours(23, 59, 59);
+      } else if (rangeType === "week") {
+        const day = baseDate.getDay();
+        const diff = day === 0 ? 6 : day - 1;
+        start = new Date(baseDate);
+        start.setDate(baseDate.getDate() - diff);
+        end = new Date(start);
+        end.setDate(start.getDate() + 6);
+        end.setHours(23, 59, 59);
+      } else if (rangeType === "month") {
+        start = new Date(baseDate.getFullYear(), baseDate.getMonth(), 1);
+        end = new Date(baseDate.getFullYear(), baseDate.getMonth() + 1, 0);
+        end.setHours(23, 59, 59);
+      }
+
+      return {
+        startISO: start.toISOString(),
+        endISO: end.toISOString()
+      };
     }
 
     async function updateChartAndTable() {
       const date = document.getElementById("datePicker").value;
       const interval = parseInt(document.getElementById("interval").value);
+      const rangeType = document.getElementById("rangeType").value;
       if (!date) return;
 
-      const startOfDay = new Date(`${date}T00:00:00+09:00`).toISOString();
-      const endOfDay = new Date(`${date}T23:59:59+09:00`).toISOString();
+      const { startISO, endISO } = getDateRange(rangeType, date);
       const snapshot = await db.collection("logs")
-        .where("timestamp", ">=", startOfDay)
-        .where("timestamp", "<=", endOfDay)
+        .where("timestamp", ">=", startISO)
+        .where("timestamp", "<=", endISO)
         .orderBy("timestamp")
         .get();
 
@@ -215,7 +147,7 @@
 
         const stay = exitTime ? Math.floor((exitTime - enterTime) / 60000) : null;
         details.push({
-          date,
+          date: enterTime.toLocaleDateString("ja-JP", { timeZone: 'Asia/Tokyo' }),
           table,
           slot: slots[slotIndex],
           stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
@@ -224,7 +156,6 @@
         });
       });
 
-      // ソート
       details.reverse();
 
       const ctx = document.getElementById("histogram").getContext("2d");
@@ -252,7 +183,6 @@
         }
       });
 
-      // 表描画
       const tbody = document.getElementById("logTableBody");
       tbody.innerHTML = "";
       for (const d of details) {
@@ -267,15 +197,27 @@
           </tr>
         `;
       }
+
+      window.latestDetails = details;
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const today = new Date().toISOString().split("T")[0];
-      document.getElementById("datePicker").value = today;
-      updateChartAndTable();
+    setInterval(updateChartAndTable, 60000);
 
-      document.getElementById("datePicker").addEventListener("change", updateChartAndTable);
-      document.getElementById("interval").addEventListener("change", updateChartAndTable);
+    document.getElementById("rangeType").addEventListener("change", updateChartAndTable);
+
+    document.getElementById("downloadCSV").addEventListener("click", () => {
+      const rows = [["日付", "時間帯", "テーブル番号", "滞在時間", "入店時間", "退店時間"]];
+      (window.latestDetails || []).forEach(d => {
+        rows.push([d.date, d.slot, d.table, d.stay, d.enter, d.exit]);
+      });
+      const csvContent = rows.map(r => r.join(",")).join("\n");
+      const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "混雑データ.csv";
+      a.click();
+      URL.revokeObjectURL(url);
     });
   </script>
 </body>
