--- a/histogram.html
+++ b/histogram.html
@@ -170,9 +170,9 @@
       const slots = [];
       for (let h = 0; h < 24; h++) {
         for (let m = 0; m < 60; m += interval) {
-          const start = ${String(h).padStart(2, '0')}:${String(m).padStart(2, '0')};
-          const end = ${String(h + Math.floor((m + interval) / 60)).padStart(2, '0')}:${String((m + interval) % 60).padStart(2, '0')};
-          slots.push(${start}～${end});
+          const start = `${String(h).padStart(2, '0')}:${String(m).padStart(2, '0')}`;
+          const end = `${String(h + Math.floor((m + interval) / 60)).padStart(2, '0')}:${String((m + interval) % 60).padStart(2, '0')}`;
+          slots.push(`${start}～${end}`);
         }
       }
       return slots;
@@ -187,8 +187,8 @@
       const interval = parseInt(document.getElementById("interval").value);
       if (!date) return;
 
-      const startOfDay = new Date(${date}T00:00:00+09:00).toISOString();
-      const endOfDay = new Date(${date}T23:59:59+09:00).toISOString();
+      const startOfDay = new Date(`${date}T00:00:00+09:00`).toISOString();
+      const endOfDay = new Date(`${date}T23:59:59+09:00`).toISOString();
       const snapshot = await db.collection("logs")
         .where("timestamp", ">=", startOfDay)
         .where("timestamp", "<=", endOfDay)
@@ -218,7 +218,7 @@
           date,
           table,
           slot: slots[slotIndex],
-          stay: stay !== null ? ${Math.floor(stay / 60)}時間${stay % 60}分 : "退店未登録",
+          stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
           enter: enterTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }),
           exit: exitTime ? exitTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }) : "--"
         });
@@ -256,7 +256,7 @@
       const tbody = document.getElementById("logTableBody");
       tbody.innerHTML = "";
       for (const d of details) {
-        tbody.innerHTML += 
+        tbody.innerHTML += `
           <tr>
             <td>${d.date}</td>
             <td>${d.slot}</td>
@@ -265,7 +265,7 @@
             <td>${d.enter}</td>
             <td>${d.exit}</td>
           </tr>
-        ;
+        `;
       }
     }
 
