--- a/histogram.html
+++ b/histogram.html
@@ -175,15 +175,32 @@
     let chart;
 
     function getTimeSlots(interval) {
-      const slots = [];
-      for (let h = 0; h < 24; h++) {
-        for (let m = 0; m < 60; m += interval) {
-          const start = `${String(h).padStart(2, '0')}:${String(m).padStart(2, '0')}`;
-          const end = `${String(h + Math.floor((m + interval) / 60)).padStart(2, '0')}:${String((m + interval) % 60).padStart(2, '0')}`;
-          slots.push(`${start}～${end}`);
-        }
-      }
-      return slots;
+      let labels = [];
+let counts = [];
+
+if (rangeType === "day") {
+  labels = getTimeSlots(interval);
+  counts = Array(labels.length).fill(0);
+} else if (rangeType === "week") {
+  const startDate = new Date(startISO);
+  for (let i = 0; i < 7; i++) {
+    const d = new Date(startDate);
+    d.setDate(startDate.getDate() + i);
+    labels.push(`${d.getMonth() + 1}/${d.getDate()}`);
+  }
+  counts = Array(7).fill(0);
+} else if (rangeType === "month") {
+  const startDate = new Date(startISO);
+  const endDate = new Date(endISO);
+  const startMonth = startDate.getMonth();
+  const endMonth = endDate.getMonth();
+  const year = startDate.getFullYear();
+
+  for (let m = startMonth; m <= endMonth; m++) {
+    labels.push(`${m + 1}月`);
+  }
+  counts = Array(labels.length).fill(0);
+}
     }
 
     function getDateRange(rangeType, baseDateStr) {
@@ -240,25 +257,40 @@ async function updateChartAndTable() {
   const details = [];
 
   enters.forEach(entry => {
-    const table = entry.table;
-    const enterTime = new Date(entry.timestamp);
-    const exit = exits.find(e => e.table === table && new Date(e.timestamp) > enterTime);
-    const exitTime = exit ? new Date(exit.timestamp) : null;
+  const table = entry.table;
+  const enterTime = new Date(entry.timestamp);
+  const exit = exits.find(e => e.table === table && new Date(e.timestamp) > enterTime);
+  const exitTime = exit ? new Date(exit.timestamp) : null;
 
+  let index = -1;
+
+  if (rangeType === "day") {
     const minutes = enterTime.getHours() * 60 + enterTime.getMinutes();
-    const slotIndex = Math.floor(minutes / interval);
-    if (counts[slotIndex] !== undefined) counts[slotIndex]++;
+    index = Math.floor(minutes / interval);
+  } else if (rangeType === "week") {
+    const dayDiff = Math.floor((enterTime - new Date(startISO)) / (1000 * 60 * 60 * 24));
+    index = dayDiff >= 0 && dayDiff < 7 ? dayDiff : -1;
+  } else if (rangeType === "month") {
+    const month = enterTime.getMonth();
+    const baseMonth = new Date(startISO).getMonth();
+    index = month - baseMonth;
+  }
 
-    const stay = exitTime ? Math.floor((exitTime - enterTime) / 60000) : null;
-    details.push({
-      date: enterTime.toLocaleDateString("ja-JP", { timeZone: 'Asia/Tokyo' }),
-      table,
-      slot: slots[slotIndex],
-      stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
-      enter: enterTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }),
-      exit: exitTime ? exitTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }) : "--"
-    });
+  if (index >= 0 && index < counts.length) {
+    counts[index]++;
+  }
+
+  const stay = exitTime ? Math.floor((exitTime - enterTime) / 60000) : null;
+  details.push({
+    date: enterTime.toLocaleDateString("ja-JP", { timeZone: 'Asia/Tokyo' }),
+    table,
+    slot: rangeType === "day" ? labels[index] : labels[index] ?? "--",
+    stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
+    enter: enterTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }),
+    exit: exitTime ? exitTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }) : "--"
   });
+});
+
 
   details.reverse();
 
