--- a/histogram.html
+++ b/histogram.html
@@ -306,7 +306,10 @@ async function updateChartAndTable() {
       maintainAspectRatio: false,
       scales: {
         y: {
-          beginAtZero: true
+          beginAtZero: true,
+          ticks: {
+            stepSize: 1   
+          }
         }
       }
     }
