--- a/histogram.html
+++ b/histogram.html
@@ -307,7 +307,7 @@ async function updateChartAndTable() {
       scales: {
         y: {
           beginAtZero: true,
-          max: 10,
+          suggestedMax: 10,
           ticks: {
             stepSize: 1   
           }
