--- a/histogram.html
+++ b/histogram.html
@@ -136,6 +136,7 @@
         <option value="week">週</option>
         <option value="month">月</option>
       </select>
+        <button id="downloadCSV">CSVダウンロード</button>
     </div>
     <div class="chart-container">
       <canvas id="histogram"></canvas>
