--- a/map.html
+++ b/map.html
@@ -147,6 +147,14 @@
       updateTableDisplays();
     }
 
+  function watchWaitingCount() {
+    db.collection("queue").where("status", "==", "waiting")
+      .onSnapshot(snapshot => {
+        const count = snapshot.size;
+        document.getElementById("waitingCount").textContent = count;
+      });
+  }
+
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
       setInterval(updateTableDisplays, 60000);
@@ -244,6 +252,13 @@
 
     <!-- 入り口 -->
     <div class="label" style="top: 0px; left: 370px;">入口</div>
+
+    <div id="entrance-area" style="position: absolute; top: 20px; left: 20px;">
+  <div style="width: 140px; height: 80px; background: #ffffff; border: 2px solid #555; border-radius: 12px; display: flex; flex-direction: column; justify-content: center; align-items: center; box-shadow: 2px 2px 8px rgba(0,0,0,0.2);">
+    <strong>待機人数</strong>
+    <span id="waitingCount" style="font-size: 24px; font-weight: bold; color: #e74c3c;">--</span>
+  </div>
+</div>
   </div>
 
 </body>
