--- a/map.html
+++ b/map.html
@@ -11,15 +11,16 @@
     body {
       background-color: #f0e4d7;
       font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      position: relative;
+      margin: 0;
+      padding: 0;
     }
 
     .floor {
       position: relative;
       width: 800px;
       height: 600px;
+      margin: 20px auto;
       background-color: #f7e3c5;
       border: 2px solid #444;
     }
