--- a/map.html
+++ b/map.html
@@ -38,6 +38,18 @@
       border-radius: 4px;
     }
 
+    .table3 {
+      position: absolute;
+      width: 130px;
+      background-color: #7b4a12;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
     .table {
       height: 130px;
     }
@@ -46,7 +58,11 @@
       height: 90px;
     }
 
-    .table.occupied, .table2.occupied {
+    .table3 {
+      height: 80px;
+    }
+
+    .table.occupied, .table2.occupied, .table3.occupied {
       background-color: #b71c1c;
     }
 
@@ -230,8 +246,8 @@
     <div class="table" style="top: 470px; left: 480px;" id="table7" data-table="7">7</div>
     <div class="chair" style="top: 485px; left: 460px;" data-table="7"></div>
     <div class="chair" style="top: 485px; left: 562px;" data-table="7"></div>
-    <div class="chair" style="top: 525px; left: 460px;" data-table="7"></div>
-    <div class="chair" style="top: 525px; left: 562px;" data-table="7"></div>
+    <div class="chair" style="top: 485px; left: 511px;" data-table="7"></div>
+    <div class="chair" style="top: 565px; left: 511px;" data-table="7"></div>
     <div class="chair" style="top: 565px; left: 460px;" data-table="7"></div>
     <div class="chair" style="top: 565px; left: 562px;" data-table="7"></div>
 
