--- a/map.html
+++ b/map.html
@@ -243,7 +243,7 @@
 
 
     <!-- テーブル7 -->
-    <div class="table" style="top: 470px; left: 480px;" id="table7" data-table="7">7</div>
+    <div class="table3" style="top: 470px; left: 480px;" id="table7" data-table="7">7</div>
     <div class="chair" style="top: 485px; left: 460px;" data-table="7"></div>
     <div class="chair" style="top: 485px; left: 562px;" data-table="7"></div>
     <div class="chair" style="top: 485px; left: 511px;" data-table="7"></div>
