--- a/map.html
+++ b/map.html
@@ -251,6 +251,15 @@
     <div class="chair" style="top: 482px; left: 391px;" data-table="7"></div>
     <div class="chair" style="top: 482px; left: 493px;" data-table="7"></div>
 
+    <!-- テーブル8 -->
+    <div class="table3" style="top: 200px; left: 385px;" id="table7" data-table="8">8</div>
+    <div class="chair" style="top: 181px; left: 391px;" data-table="8"></div>
+    <div class="chair" style="top: 181px; left: 493px;" data-table="8"></div>
+    <div class="chair" style="top: 181px; left: 442px;" data-table="8"></div>
+    <div class="chair" style="top: 282px; left: 442px;" data-table="8"></div>
+    <div class="chair" style="top: 282px; left: 391px;" data-table="8"></div>
+    <div class="chair" style="top: 282px; left: 493px;" data-table="8"></div>
+
 
     
     <!-- テーブル3（中央8名） -->
