--- a/map.html
+++ b/map.html
@@ -138,7 +138,7 @@
     }
 
     function countVisitors(snapshot) {
-      for (let i = 1; i <= 7; i++) {
+      for (let i = 1; i <= 8; i++) {
         tableCounts[i.toString()] = { enter: 0, exit: 0, lastEnterTime: null };
       }
 
@@ -272,7 +272,7 @@
     <div class="chair" style="top: 180px; left: 270px;"></div>
 
     <!-- スタッフエリア -->
-    <div class="label" style="top: 90px; left: 270px; width: 100px; text-align: center;">スタッフ</div>
+    <div class="label" style="top: 90px; left: 270px; width: 100px; height: 400px text-align: center;">スタッフ</div>
 
     <!-- WC -->
     <div class="label" style="top: 20px; left: 110px;">WC</div>
