--- a/map.html
+++ b/map.html
@@ -229,6 +229,7 @@
     <div class="border2" style="top: 450px; left: 630px;"></div>
 
     <!-- 横棒-->
+    <div class="border" style="top: 326px; left: 385px;"></div>
     <div class="border" style="top: 400px; left: 630px;"></div>
 
 
@@ -252,7 +253,7 @@
     <div class="chair" style="top: 482px; left: 493px;" data-table="7"></div>
 
     <!-- テーブル8 -->
-    <div class="table3" style="top: 200px; left: 385px;" id="table7" data-table="8">8</div>
+    <div class="table3" style="top: 200px; left: 385px;" id="table8" data-table="8">8</div>
     <div class="chair" style="top: 181px; left: 391px;" data-table="8"></div>
     <div class="chair" style="top: 181px; left: 493px;" data-table="8"></div>
     <div class="chair" style="top: 181px; left: 442px;" data-table="8"></div>
