--- a/map.html
+++ b/map.html
@@ -229,8 +229,10 @@
     <div class="border2" style="top: 450px; left: 630px;"></div>
 
     <!-- 横棒-->
+    <div class="border" style="top: 141px; left: 385px;"></div>
     <div class="border" style="top: 341px; left: 385px;"></div>
     <div class="border" style="top: 400px; left: 630px;"></div>
+    <div class="border" style="top: 522px; left: 630px;"></div>
 
 
     <!-- テーブル6 -->
