--- a/map.html
+++ b/map.html
@@ -223,6 +223,9 @@
     <div class="chair" style="top: 335px; left: 762px;" data-table="5"></div>
 
     <!--　縦棒-->
+    <div class="border2" style="top: 320px; left: 600px;"></div>
+    <div class="border2" style="top: 420px; left: 600px;"></div>
+
     <div class="border3" style="top: 0px; left: 630px;"></div>
     <div class="border3" style="top: 160px; left: 630px;"></div>
     <div class="border3" style="top: 310px; left: 630px;"></div>
