--- a/map.html
+++ b/map.html
@@ -269,13 +269,9 @@
 
     
     <!-- テーブル9（中央8名） -->
-    <div class="table" style="top: 140px; left: 210px; width: 60px; height: 462px;" id="table8">8</div>
-    <div class="chair" style="top: 80px; left: 190px;"></div>
-    <div class="chair" style="top: 80px; left: 270px;"></div>
-    <div class="chair" style="top: 130px; left: 190px;"></div>
-    <div class="chair" style="top: 130px; left: 270px;"></div>
-    <div class="chair" style="top: 180px; left: 190px;"></div>
-    <div class="chair" style="top: 180px; left: 270px;"></div>
+    <div class="table" style="top: 140px; left: 210px; width: 60px; height: 462px;" id="table9" data-table="9">9</div>
+    <div class="chair" style="top: 180px; left: 190px;" data-table="9"></div>
+
 
     <!-- スタッフエリア -->
     <div class="label" style="top: 130px; left: 270px; width: 100px; height: 465px; text-align: center;">スタッフ</div>
