--- a/map.html
+++ b/map.html
@@ -274,7 +274,7 @@
 
 
     <!-- スタッフエリア -->
-    <div class="label" style="top: 130px; left: 270px; width: 100px; height: 465px; text-align: center;">スタッフ</div>
+    <div class="label" style="top: 130px; left: 270px; width: 100px; height: 465px; text-align: center; writing-mode: vertical-rl; transform: rotate(180deg);">スタッフ</div>
 
     <!-- WC -->
     <div class="label" style="top: 20px; left: 110px;">WC</div>
