--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       let entries = 0;
       let exits = 0;
 
-      for (let i = 1; i <= 7; i++) {
+      for (let i = 1; i <= 9; i++) {
         tableCounts[i.toString()] = {
           enter: 0,
           exit: 0,
@@ -242,6 +242,8 @@
       <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
       <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
       <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
+      <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
+      <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
     </section>
   </main>
 
