--- a/wait.html
+++ b/wait.html
@@ -115,6 +115,13 @@
     </div>
   </div>
 
+  <div style="margin-top: 60px; padding: 20px 0; border-top: 2px solid #2c3e50; font-size: 18px;">
+    <a href="map.html" style="text-decoration: underline; color: #2c3e50;">
+      店内マップ / Store Map
+    </a>
+  </div>
+
+
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
